# small_utility

./: .gitignore  CMakeLists.txt  README  quick_build.sh  run.sh  xmake.lua
docs/source/: conf.py  index.rst
src/: .small_utility.cc.un~  .xmake.lua.un~  CMakeLists.txt  small_utility.cc  small_utility.h  xmake.lua
src/file/: .file.cc.un~  .file.h.un~  .file_forward.h.un~  CMakeLists.txt  file.cc  file.h  file_forward.h
src/log/: .LogTargetBothFileAndConsole.h.un~  .log.cc.un~  .log.h.un~  .log_forward.h.un~  .log_message_info.cc.un~  .log_message_info.h.un~  .log_target.h.un~  .log_target_both_file_and_console.h.un~  .log_target_console.cc.un~  .log_target_console.h.un~  .log_target_file.cc.un~  .log_target_file.h.un~  .log_target_forward.h.un~  .logger.cc.un~  .logger.h.un~  .logger_forward.h.un~  CMakeLists.txt  log_level.h  log_message_info.cc  log_message_info.h  log_target.h  log_target_both_file_and_console.h  log_target_console.cc  log_target_console.h  log_target_file.cc  log_target_file.h  log_target_forward.h  logger.cc  logger.h  logger_forward.h
src/math/: CMakeLists.txt  math.h
src/reference_counting/: reference_counted_pointer.cc  reference_counted_pointer.h  reference_counted_pointer_forward.h  reference_holder.cc  reference_holder.h  reference_holder.hpp  reference_holder_forward.h
src/string/: .makefile.un~  .string.cc.un~  .string.h.un~  .string_forward.h.un~  CMakeLists.txt  string.cc  string.h  string_forward.h
src/time/: CMakeLists.txt  time.cc  time.h
src/utility/: CMakeLists.txt  (+4 more)
test/: .xmake.lua.un~  CMakeLists.txt  xmake.lua
(+59 files in other folders)
